2010-04-17  Glenn Morris  <rgm@gnu.org>

	* htmlfontify.el (htmlfontify-buffer)
	(htmlfontify-copy-and-link-dir): Autoload entry points.

2010-04-17  Magnus Henoch  <magnus.henoch@gmail.com>

	* vc-hg.el (vc-hg-annotate-extract-revision-at-line): Expand file
	name relative to the project root (Bug#5960).

2010-04-16  Glenn Morris  <rgm@gnu.org>

	* vc-git.el (vc-git-print-log): Doc fix.

2010-04-14  Óscar Fuentes  <ofv@wanadoo.es>

	* ido.el (ido-file-internal): Fix 2009-12-02 change.

2010-04-14  Christoph  <cschol2112@googlemail.com>  (tiny change)

	* progmodes/grep.el (grep-compute-defaults): Fix handling of host
	default settings (Bug#5928).

2010-04-10  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-match-and-skip-declaration):
	New function.
	(fortran-font-lock-keywords-3): Use it.  (Bug#1385)

2010-04-07  Kenichi Handa  <handa@m17n.org>

	* language/indian.el (malayalam-composable-pattern): Fix previous
	change (add U+0D4D "SIGN VIRAMA").
	(oriya-composable-pattern): Add U+0B30 and fix typo in the regexp.
	(tamil-composable-pattern): Fix typo in the regexp.
	(telugu-composable-pattern): Fix U+0C4D and typo in the regexp.
	(kannada-composable-pattern): Fix U+0CB0 and typo in the regexp.
	(malayalam-composable-pattern): Fix U+0D4D and typo in the regexp.

2010-04-06  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/tex-mode.el (latex-mode): Revert 2008-03-03 change to
	paragraph-separate (Bug#5821).

2010-04-05  Juri Linkov  <juri@jurta.org>

	Put breadcrumbs on overlay instead of inserting to buffer (bug#5809).

	* info.el (Info-find-node-2): Comment out code that skips
	breadcrumbs line.
	(Info-mouse-follow-link): New command.
	(Info-link-keymap): New keymap.
	(Info-breadcrumbs): Rename from `Info-insert-breadcrumbs'.
	Return a string with links instead of inserting breadcrumbs
	to the Info buffer.
	(Info-fontify-node): Comment out code that inserts breadcrumbs.
	Instead of putting the `invisible' text property over the Info